# AlmostSmartCar

./: README.md
Client/: CMakeLists.txt  OnScreenJoystick.qml  README.md  control.cpp  control.h  main.cpp  main.qml  qml.qrc
Client/android/: AndroidManifest.xml
Server/: CMakeLists.txt  LiquidCrystal.cpp  LiquidCrystal.h  README.md  main.cpp  server.cpp  server.h  sonic.cpp  sonic.h
